--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive"
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --reporter landing --recursive"
   },
   "babel": {
     "presets": [
@@ -44,9 +44,12 @@
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
+    "eslint-config-airbnb": "^4.0.0",
+    "eslint-plugin-react": "^3.15.0",
     "mocha": "^2.3.4",
     "morgan": "^1.6.1",
     "react-hot-loader": "^1.3.0",
+    "supertest": "^1.1.0",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
   }
