--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "start": "nodemon server/server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --reporter landing --recursive"
   },
   "babel": {
