--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
+    "react-router": "^1.0.3",
     "redux": "^3.0.5",
     "rethinkdb": "^2.2.1",
     "thinky": "^2.2.4"
@@ -45,7 +46,9 @@
   "devDependencies": {
     "babel-cli": "^6.4.5",
     "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
     "eslint-config-airbnb": "^4.0.0",
@@ -53,6 +56,9 @@
     "mocha": "^2.3.4",
     "morgan": "^1.6.1",
     "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^3.0.1",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.2",
     "supertest": "^1.1.0",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
