--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "react"
     ]
   },
   "repository": {
@@ -31,8 +32,11 @@
     "eslint": "^1.10.3",
     "express": "^4.13.4",
     "express-jwt": "^3.3.0",
+    "flexboxgrid": "^6.3.0",
+    "history": "^1.17.0",
     "immutable": "^3.7.6",
     "jsonwebtoken": "^5.5.4",
+    "material-ui": "^0.14.2",
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
     "passport-google": "^0.3.0",
@@ -41,6 +45,7 @@
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
     "react-router": "^1.0.3",
+    "react-tap-event-plugin": "^0.2.1",
     "redux": "^3.0.5",
     "rethinkdb": "^2.2.1",
     "thinky": "^2.2.4"
