--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "start": "nodemon server/server.js",
+    "postinstall": "webpack --config ./webpack-production.config.js --progress --colors",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --reporter landing --recursive"
   },
   "babel": {
