Added redux form configuration. Added gitignore for hot-update files in /client.

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ public/client/bundle.js.map
 public/extension/bundle.js
 public/*.js
 public/*.json
+public/client/*.hot-update.js
+public/client/*.hot-update.json
 
 ## env variables
 .env
