--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "material-ui": "^0.14.2",
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
+    "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
