--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "nodemon server/server.js",
     "postinstall": "webpack --config ./webpack-production.config.js",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --reporter landing --recursive"
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive"
   },
   "babel": {
     "presets": [
