--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "babel-preset-react": "^6.3.13",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.2",
+    "cloudinary": "^1.3.0",
     "cors": "^2.7.1",
-    "eslint": "^1.10.3",
     "express": "^4.13.4",
     "express-jwt": "^3.3.0",
     "flexboxgrid": "^6.3.0",
@@ -46,8 +46,6 @@
     "jsonwebtoken": "^5.5.4",
     "material-ui": "^0.14.2",
     "passport": "^0.3.2",
-    "passport-facebook": "^2.0.0",
-    "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
